# logitech-widget

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json
.claude/skills/ghub-websocket/: SKILL.md
.claude/skills/hidpp-battery/: SKILL.md
.claude/skills/tauri-widget/: SKILL.md
docs/: PLAN.md
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: dump_batteries.rs  dump_ghub.rs  dump_hid.rs  dump_merged.rs  probe_receiver.rs
src-tauri/src/: lib.rs  main.rs  poller.rs  settings.rs  tray.rs  window.rs
src-tauri/src/battery/: ghub.rs  mod.rs
src-tauri/src/battery/hidpp/: diag.rs  mod.rs  proto.rs  transport.rs
